Heroku deployment: add node engine

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Full Stack Class Record</title>
+    <title>Abacus - Visual Platform of Class Record</title>
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="https://images.emojiterra.com/twitter/v11/512px/1f9ee.png"
+    />
     <link
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
