change logic for attendance

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,19 +9,21 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Full Stack Class Record</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div id="root">
-    </div>
+    <div id="root"></div>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script>
-    $(document).ready(function() {
-      $('.sidenav').sidenav();
-    });
-
-  </script>
+    <script>
+      $(document).ready(function() {
+        $(".sidenav").sidenav();
+        $(".overview").sidenav();
+      });
+    </script>
   </body>
 </html>
