/teacher/ homepage styles complete. Attendance also complete, with bugs.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,7 @@
       $(document).ready(function() {
         $(".sidenav").sidenav();
         $(".overview").sidenav();
+        $('.modal').modal();
       });
     </script>
   </body>
