--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,7 @@
         $(".sidenav").sidenav();
         $(".overview").sidenav();
         $('.modal').modal();
+        $('.parallax').parallax();
       });
     </script>
   </body>
