Add class to homepage and add favicon

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,11 +8,12 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Full Stack Class Record</title>
+    <title>Abacus Class Record</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
+    <link rel="icon" type="image/png" href="https://i.imgur.com/MPja0Rf.png" />
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
@@ -23,8 +24,8 @@
       $(document).ready(function() {
         $(".sidenav").sidenav();
         $(".overview").sidenav();
-        $('.modal').modal();
-        $('.parallax').parallax();
+        $(".modal").modal();
+        $(".parallax").parallax();
       });
     </script>
   </body>
